@@ -6321,6 +6321,8 @@ dimensions).
 
 \fun{GEN}{ZM_transmultosym}{GEN x, GEN y}
 
+\fun{GEN}{ZM_transmul}{GEN x, GEN y}
+
 \fun{GEN}{ZMrow_ZC_mul}{GEN x, GEN y, long i} multiplies the $i$-th row
 of \kbd{ZM}~\kbd{x} by the \kbd{ZC}~\kbd{y} (seen as a column vector, assumed
 to have compatible dimensions). Assumes that $x$ is non-empty and
